style.css
/*!
* LICENSE - style only: CC BY-NC-SA
* @link https://creativecommons.org/licenses/by-nc-sa/3.0/
*
* Title: Vaporwave
* Author: Shannon Crabill
* Website: http://shannoncrabill.com/
* Twitter: @shannon_crabill
*
* View on Style Stage:
* @link https://stylestage.moderncss.dev/styles/vaporwave/
*/

:root {
  --primary-color: #A00893; /* Magneta */
  --secondary-color: #C1C6FC; /* Periwinkle */
  --accent-color: #BE03FD; /* Pink */
  --alt-accent-color: #00f1ff; /* Cyan */
  --dark-color: #000133; /* Very Dark purple */
}

body {
  color: black;
  font-family: Arial, Helvetica, sans-sans-serif;
  font-size: 1.2em;
  line-height: 1.5em;
  max-width: 800px;
  margin: 0 0 0 2%;
  background: rgb(213,253,255);
  background: radial-gradient(circle, rgba(213,253,255,1) 0%, rgba(255,227,252,1) 100%);
}

/* Structure */

header .container,
nav {
  text-align: center;
}

/* Typography */

h1,h2,h3,h4,h5,h6 {
  color: var(--accent-color);
  text-shadow: 3px 3px var(--alt-accent-color);
  text-transform: lowercase;
  letter-spacing: 5px;
  font-weight: bold;
  font-style: italic;
}

h1 {
    text-transform: uppercase;
    font-weight: normal;
    font-family: monospace;
    font-size: 5em;
    color: white;
}

/* Links */

a:link,
a:visited,
a:active {
  color: var(--accent-color);
  text-decoration: none;
  font-style: italic;
  border-bottom: 2px solid var(--accent-color);
  margin: 0 0 4px 0;
}

a.skip-link,
header div.container a.link-github,
a.link-downloadcss,
a.link-downloadhtml,
a.link-codepen {
  font-family: monospace;
  background-color: silver;
  color: black;
  padding: 10px;
  margin: 0;
  border-left: 5px solid whitesmoke;
  border-bottom: 5px solid grey;
  border-right: 5px solid grey;
  border-top: 5px solid whitesmoke;
  top: auto;
}

a.skip-link {
  position: absolute;
}

/* Skip link */

.skip-link {
  position: absolute;
  top: auto;
  left: -10000px;
  width: 1px;
  height: 1px;
}

.skip-link:focus {
  position: absolute;
  top: 0;
  left: 0;
  width: auto;
  height: auto;
  padding: 0.5em; }

/* Lists */

ol {
  list-style-type: lower-roman;
}

ul {
  list-style-type: "⭑";
}

nav ul {
  list-style-type: none;
}

nav ul li {
  display: inline;
  margin: 0 1%;
}

/* Bonus! */
::selection {
  background-color: var(--alt-accent-color);
}

blockquote {
  padding: 20px;
  margin: 0;
  border-bottom: 5px solid lightgrey;
  background-color: lightgrey;
  border-top: 20px solid navy;
  font-family: monospace;
  }

blockquote a,
blockquote a:link,
blockquote a:visited,
blockquote a:active {
  color: black;
  font-weight: bold;
  border-bottom: none;
}

svg {
  height: 1.2em;
  fill: black;
}

@media screen AND (max-width: 5`00px) {
  body {
    margin: 0 auto;
    padding: 0 2%;
  }
  h1 {
    font-size: 2.5em;
    line-height: 1.2em;
  }

  nav ul {
    padding: 0;
  }

  a.skip-link, header div.container a.link-github, a.link-downloadcss, a.link-downloadhtml, a.link-codepen {
    display: block;
  }
}

